--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,52 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+   <title>Learn Game Development Now | <%= yield(:title) %></title>
+    <%= stylesheet_link_tag    "style", :media => "all" %>
+  <%= javascript_include_tag "ga" %>
+  <%= javascript_include_tag "helper" %>
+  <%= javascript_include_tag "jquery" %>
+  <%= javascript_include_tag "modernizr.custom" %>
+  <%= javascript_include_tag "plugins" %>
+  <%= javascript_include_tag "script" %>
+  <%= javascript_include_tag "webfont" %>
+  <%= javascript_include_tag "wfl" %>
+
+   <!-- How viewports work: http://t.co/dKP3o1e -->
+			<meta name="HandheldFriendly" content="True">
+			<meta name="MobileOptimized" content="320">
+			<meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0">
+
+			<!-- Windows/IE font smoothing -->
+			<meta http-equiv="cleartype" content="on">
+			<!-- Use latest IE randering angine and switch on chrome Frame if available -->
+			<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+			
+
+			<!--[if (IE 7)]>
+				<link rel="stylesheet" href="/css/fallback/icons-ie7.css">
+			<![endif]--><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:400,700,300,100,900&subset=latin">
+  
+     <!-- Bootstrap core CSS -->
+    <link href="../../dist/css/bootstrap.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="offcanvas.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="../../assets/js/html5shiv.js"></script>
+      <script src="../../assets/js/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
 
 <%= yield %>
+
+<script src="../../assets/js/jquery.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="offcanvas.js"></script>
 
 </body>
 </html>
