--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,38 +8,13 @@
 		<nav role="navigation">
 
 						<ul class="open ">
-				    <li><a href="./somtim_files/somtim.html" class="nav-home current" data-canxfilter=""><i class=""><img src="/assets/home 2.png" /> </i></a></li>
-    <li><a href="http://etchapps.com/#studio" data-filter=".studio"><i class=""><img src="/assets/world.png" /></i><span>Studio</span></a></li>
-    <li><a href="http://etchapps.com/#team" data-filter=".team"><i class=""><img src="/assets/group.png" /></i><span>Team</span></a></li>
-    <li><a href="http://etchapps.com/#projects" data-filter=".projects"><i class=""><img src="/assets/help.png" /></i><span>FAQ</span></a></li>
+				    <li><a href="#" class="nav-home current" data-canxfilter=""><i class=""><img src="/assets/home 2.png" /> </i></a></li>
+    <li><a href="#" data-filter=".studio"><i class=""><img src="/assets/world.png" /></i><span>Studio</span></a></li>
+    <li><a href="#" data-filter=".team"><i class=""><img src="/assets/group.png" /></i><span>Team</span></a></li>
+    <li><a href="#" data-filter=".projects"><i class=""><img src="/assets/help.png" /></i><span>FAQ</span></a></li>
     
-			</ul><nav class="subnav">
-			
-					</nav>
+			</ul><div class="pull-right"><a href="#">Login</a></div>
 
-			
-
-			
-		<div id="new-contact" itemscope="" itemtype="http://schema.org/Organization" class="nav-contact" style="display: none;">
-
-				<div class="inner">
-
-					<h4><a itemprop="name" href="./somtim_files/somtim.html">Etch</a></h4>
-
-					<p><i class="icon icon-envelope-alt"></i><a itemprop="email" href="mailto:info@etchapps.com">info@etchapps.com</a></p>
-
-					<p><i class="icon icon-phone"></i><span itemprop="telephone">+44 1227 780726</span></p>
-
-					<p itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
-						<i class="icon icon-map-marker"></i>
-						<span itemprop="streetAddress">14 St John's Lane</span>,
-						<span itemprop="addressLocality">Canterbury</span>,
-						<span itemprop="addressRegion">Kent</span>,
-						<span itemprop="postalCode">CT1 2QG</span>,
-						<abbr itemprop="addressCountry" itemscope="" itemtype="http://schema.org/Country" title="United Kingdom">UK</abbr>
-				    </p>
-
-				</div>
 
 			</div></nav>
 
@@ -51,6 +26,7 @@
                 <img class="resize" src="/assets/bloclogo.png" alt="BLOC Logo" title="BLOC Logo" style="transition: all 0s ease; -webkit-transition: all 0s ease; opacity: 1;">
                 <noscript>&lt;img src="/asssets/bloclogo.png"  alt="BLOC logo" title="Bloc Logo" /&gt;</noscript>
             </div>
+
 
         </div>
 
@@ -293,7 +269,7 @@
 			
 					</nav>
 
-		<div class="jobs"><a href="http://jobs.etchapps.com/"><small>Apply Today!</small></a></div>
+		<div class="jobs"><a href="#"><small>Apply Today!</small></a></div>
 
 		<footer role="contentinfo">
 
@@ -303,7 +279,7 @@
 
 					<h4><a itemprop="name" href="./somtim_files/somtim.html">Bloc Academy</a></h4>
 
-					<p><i class=""><img src="/assets/mail.png" /></i><a itemprop="email" href="mailto:info@etchapps.com">info@etchapps.com</a></p>
+					<p><i class=""><img src="/assets/mail.png" /></i><a itemprop="email" href="mailto:info@blocacademy.com">info@blocacademy.com</a></p>
 
 					<p><i class=""><img src="/assets/phone.png" /></i>(208) 346-0803</span></p>
 
