--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,1 +1,14 @@
-_header.html.erb
+
+<nav role="navigation">
+
+						<ul class="open ">
+				    <li><a href="#" class="nav-home current" data-canxfilter=""><i class=""><img src="/assets/home 2.png" /> </i></a></li>
+    <li><a href="#" data-filter=".studio"><i class=""><img src="/assets/world.png" /></i><span>Studio</span></a></li>
+    <li><a href="#" data-filter=".team"><i class=""><img src="/assets/group.png" /></i><span>Team</span></a></li>
+    <li><a href="#" data-filter=".projects"><i class=""><img src="/assets/help.png" /></i><span>FAQ</span></a></li>
+    
+			</ul><div class="pull-right"><a href="#">Login</a></div>
+
+<div class="pull-right"><a href="#">Apply</a></div>
+
+			</div></nav>
