added the User Class

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,5 @@
 
 <!DOCTYPE html>
-
-<html>
   
 <body class="open-menu loaded">
 
@@ -258,7 +256,7 @@
 			
 					</nav>
 
-		<div class="jobs"><a href="#"><small>Apply Today!</small></a></div>
+		<div class="jobs"><%= link_to "Apply Today!", apply_path, class: "jobs" %><small>Apply Today!</small></div>
 
 		
 
