--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,7 +20,7 @@
         <header id="intro" class="block-wrap ignore-shuffle" data-rowspan="2" data-colspan="2" style="position: absolute; width: 616.5px; height: 616.5px; top: 0px; left: 308.25px;">
             <hgroup class="block text-only" style="position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; min-height: 0px;">
                 <h1>Hi, we’re BLOC Academy</h1>
-                <h2>A <em>deicated group</em> of educators, who help anyone <em>Find their creativity</em>.</h2></br><button type="button" class="btn btn-warning pull-right btn-lg">Apply</button><button type="button" class="btn btn-info pull-right btn-lg">Video</button>
+                <h2>A <em>deicated group</em> of educators, who help anyone <em>Find their creativity</em>.</h2></br><%= link_to "Apply", apply_path, class: "btn btn-warning pull-right btn-lg" %><button type="button" class="btn btn-info pull-right btn-lg">Video</button>
             </hgroup>
         </header>
 
