--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,6 @@
     
 			</ul><div class="pull-right"><a href="#">Login</a></div>
 
-<div class="pull-right"><a href="#">Apply</a></div>
+<%= link_to "Apply", apply_path, class: "pull-right" %>
 
 			</div></nav>
