--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,9 @@
 </head>
 <body>
 	<%= render 'layouts/header' %>
-
+<% flash.each do |key, value| %>
+<div class="alert alert-<%= key %>"><%= value %></div>
+      <% end %>
 <%= yield %>
 <%= render 'layouts/footer' %>
 
