--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -54,8 +54,8 @@
                             <div class="block image img_loaded ignore-shuffle" style="position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; min-height: 0px;">
                                                                     <figure class="with-hidden-caption">
     <img class="resize ignore-shuffle" src="/assets/desert.png" rel="/img/studio/craig-desk.JPG" alt="" style="transition: all 0s ease; -webkit-transition: all 0s ease; opacity: 1;">
-    <noscript>&lt;img src="/img/studio/craig-desk.JPG" alt="" /&gt;</noscript>
-    <figcaption style="display: none;"><p>Craig, deep in thought.</p></figcaption>
+    <noscript>&lt;img src="/assets/desert.png" alt="" /&gt;</noscript>
+    <figcaption style="display: none;"><p>The desert where creativity happens.</p></figcaption>
 </figure>                                                             </div>
                         </li>
                                             <li class="block-wrap ignore-shuffle" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 308.25px; left: 924.75px;">
