--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,9 +5,9 @@
 
 				<div class="inner">
 
-					<h4><a itemprop="name" href="./somtim_files/somtim.html">Bloc Academy</a></h4>
+					<h4><a itemprop="name" href="./somtim_files/somtim.html">Jeffery Davis</a></h4>
 
-					<p><i class=""><img src="/assets/mail.png" /></i><a itemprop="email" href="mailto:info@blocacademy.com">info@blocacademy.com</a></p>
+					<p><i class=""><img src="/assets/mail.png" /></i><a itemprop="email" href="mailto:jtdavis247@gmail.com">jtdavis247@gmail.com</a></p>
 
 					<p><i class=""><img src="/assets/phone.png" /></i>(208) 346-0803</span></p>
 
@@ -25,6 +25,6 @@
 			</div>
 
 			<p><small>©2013 BLOC Academy</small></p>
-			<p><small>Our website uses delicious cookies to improve your experience. We'll assume you're ok with that.</small></p>
+			
 
 		</footer>
