--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,12 +3,12 @@
 
 						<ul class="open ">
 				    <li><a href="#" class="nav-home current" data-canxfilter=""><i class=""><img src="/assets/home 2.png" /> </i></a></li>
-    <li><a href="#" data-filter=".studio"><i class=""><img src="/assets/world.png" /></i><span>Studio</span></a></li>
-    <li><a href="#" data-filter=".team"><i class=""><img src="/assets/group.png" /></i><span>Team</span></a></li>
+    <li><a href="#" data-filter=".studio"><i class=""><img src="/assets/world.png" /></i><span>Work</span></a></li>
+    <li><a href="#" data-filter=".team"><i class=""><img src="/assets/group.png" /></i><span>About</span></a></li>
     <li><a href="#" data-filter=".projects"><i class=""><img src="/assets/help.png" /></i><span>FAQ</span></a></li>
     
-			</ul><div class="pull-right"><a href="#">Login</a></div>
+			</ul><div class="pull-right"><strong>Jeff Davis Portfolio</strong></div>
 
-<%= link_to "Apply", apply_path, class: "pull-right" %>
+
 
 			</div></nav>
