--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,9 +46,8 @@
 </head>
 <body>
 	<%= render 'layouts/header' %>
-<% flash.each do |key, value| %>
-<div class="alert alert-<%= key %>"><%= value %></div>
-      <% end %>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <%= yield %>
 <%= render 'layouts/footer' %>
 
