--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -37,8 +37,44 @@
                                             <li class="block-wrap ignore-shuffle" data-rowspan="2" data-colspan="2" style="position: absolute; width: 616.5px; height: 616.5px; top: 616.5px; left: 616.5px;">
                             <div class="block image img_loaded ignore-shuffle" style="position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; min-height: 0px;">
 
-                                                                    <figure class="with-hidden-caption">
-    <img class="resize" src="/assets/fampic.png" rel="/img/studio/lounge-2.JPG" alt="" style="transition: all 0s ease; -webkit-transition: all 0s ease; opacity: 1;">
+                                                                     <figure class="with-hidden-caption" style= "padding: 15px">
+    </br><h2> Testimonial<em>:</em></h2><p>"We contacted Jeff Davis about developing a website for Kinsella-Marsh Group after
+
+we had worked with another company for two weeks that had failed to produce 
+
+anything that was useful to us. We wanted direct access with the individual 
+
+programmer who was developing our website – someone who would give us a 
+
+personal attention, who would work with us in an interactive way and who would 
+
+provide a quick turnaround. Jeff met the challenge and did so at a fair price. 
+
+ 
+
+We had an initial website design to review in about a day. Beyond that point we 
+
+explored a variety of ideas/changes/additions that required telephone calls and e-mail 
+
+exchanges with Jeff that occurred at all hours of the day and night. Jeff was eager to 
+
+please and exceptionally responsive. The result was a great website design that was 
+
+ready to go in less than a week. 
+
+ 
+
+We are thrilled with Jeff’s performance on our website project and would highly 
+
+recommend him to anyone that is considering his services.
+
+ 
+
+Sincerely, 
+
+ 
+
+KINSELLA-MARSH GROUP, INC."</p>
 </figure>                                                             </div>
                         </li>
                                             <li class="block-wrap ignore-shuffle" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 0px; left: 924.75px;">
@@ -71,8 +107,8 @@
                         </li>
                                             <li class="block-wrap ignore-shuffle" data-rowspan="2" data-colspan="2" style="position: absolute; width: 616.5px; height: 616.5px; top: 1233px; left: 308.25px;">
                             <div class="block image img_loaded ignore-shuffle" style="position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; min-height: 0px;">
-                                                                    <figure class="with-hidden-caption">
-    <img class="resize ignore-shuffle" src="/assets/moto.png" rel="/assets/yaiba.png" alt="Yaiba Ninja Gaiden" style="transition: all 0s ease; -webkit-transition: all 0s ease; opacity: 1;">
+                                                                    <figure class="with-hidden-caption" style= "padding: 15px">
+    </br><h2> Testimonial<em>:</em></h2><p>"My husband and I recently started our own company and were completely overwhelmed with all the tasks ahead of us.  We got to the part of designing and hosting our website.  Never having done this before and knowing what an important part a website plays in a business, I wanted to make sure it wasn't just good, it was great. after I chose Jeff Davis to design our website.  Within 2 weeks I had a beautiful website that I am so proud of.  Jeff and Tanisia were professional, easy to work with, and available when I needed.  They are truly enthusiastic about their work.  I am sincerely thankful I found them.  I would not hesitate to use them again and am happy to share my experience."</br></br></br></br></br></br></br></p>
     
 </figure>                                                             </div>
                         </li>
@@ -214,7 +250,7 @@
 
                 <li class="block-wrap" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 4932px; left: 924.75px;">
                     <div class="block text-only" style="position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; min-height: 0px;">
-                        <h3>What your favorite project you have worked on? </br> A: Probably the one I am working on right now called <em><a href ="http://xoisland.com/">XOIsland.com</a> </em> it encompasses who I am as a person and a developer</em></h3>
+                        <h3>What's your favorite project? </br> A: Probably the one I am working on right now called <em><a href ="http://xoisland.com/">XOIsland.com</a> </em> it encompasses who I am as a person and a developer</em></h3>
                     </div>
                 </li>
 
