--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-   <title><%= full_title(yield(:title)) %></title>
+   <title>Jeffs Portfolio</title>
     <%= stylesheet_link_tag    "style", :media => "all" %>
   <%= javascript_include_tag "ga" %>
   <%= javascript_include_tag "helper" %>
