adds links to pop out in new window.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -29,7 +29,7 @@
             <header class="block-wrap ignore-shuffle" data-rowspan="2" data-colspan="2" style="position: absolute; width: 616.5px; height: 616.5px; top: 616.5px; left: 0px;">
                 <hgroup class="block text-only" style="position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; min-height: 0px;">
                     <h1>My Projects</h1>
-                    <h2>These are a few of the <em>projects</em> I have been working on. I always <em>cater to the client</em>. <em>100%</em> of the time they leave happy</h2>
+                    <h2>These are a few of the <em>projects</em> I have been working on. I always <em>cater to the client 100%</em>. Always making sure they leave happy.</h2>
                 </hgroup>
             </header>
             <div class="pep-wrapper">
@@ -84,21 +84,21 @@ KINSELLA-MARSH GROUP, INC."</p>
 
 </figure>                                                             </div>
                         </li>
-                                           <a href = "http://www.ameribin.com/"> <li class="block-wrap ignore-shuffle" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 308.25px; left: 0px;">
+                                           <a href = "http://www.ameribin.com/" target="_blank"> <li class="block-wrap ignore-shuffle" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 308.25px; left: 0px;">
 
                             <div class="block image img_loaded ignore-shuffle" style="position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; min-height: 0px;">
                                                                     <figure class="with-hidden-caption">
     <img class="resize ignore-shuffle" src="/assets/ameribin.png"  alt=" ameribin.com website" style="transition: all 0s ease; -webkit-transition: all 0s ease; opacity: 1;">
 </figure>  </a>                                                           </div>
                         </li>
-                                            <a href = "http://ccphotog.com/"><li class="block-wrap ignore-shuffle" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 308.25px; left: 924.75px;">
+                                            <a href = "http://ccphotog.com/" target="_blank"><li class="block-wrap ignore-shuffle" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 308.25px; left: 924.75px;">
                             <div class="block image img_loaded ignore-shuffle" style="position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; min-height: 0px;">
                                                                     <figure class="with-hidden-caption">
   <img class="resize ignore-shuffle" src="/assets/ccphotog.png" alt="ccphotog Website link" style="transition: all 0s ease; -webkit-transition: all 0s ease; opacity: 1;">
    
 </figure></a>                                                     </div>
                         </li>
-                                            <a href = "http://173.254.28.51/~marshpmk/"><li class="block-wrap ignore-shuffle" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 1233px; left: 0px;">
+                                            <a href = "http://173.254.28.51/~marshpmk/" target="_blank"><li class="block-wrap ignore-shuffle" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 1233px; left: 0px;">
                             <div class="block image img_loaded ignore-shuffle" style="position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; min-height: 0px;">
                                                                     <figure class="with-hidden-caption">
     <img class="resize ignore-shuffle" src="/assets/marshpmk.png"  alt=" Marsh PMK Website" style="transition: all 0s ease; -webkit-transition: all 0s ease; opacity: 1;">
@@ -112,14 +112,14 @@ KINSELLA-MARSH GROUP, INC."</p>
     
 </figure>                                                             </div>
                         </li>
-                                            <a href = "https://arcane-plains-4691.herokuapp.com/"><li class="block-wrap ignore-shuffle" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 1233px; left: 924.75px;">
+                                            <a href = "https://arcane-plains-4691.herokuapp.com/" target="_blank"><li class="block-wrap ignore-shuffle" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 1233px; left: 924.75px;">
                             <div class="block image img_loaded ignore-shuffle" style="position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; min-height: 0px;">
                                                                     <figure class="with-hidden-caption">
     <img class="resize ignore-shuffle" src="/assets/game-manager.png" alt="Game Manager for Cory Davs Game Developer" style="transition: all 0s ease; -webkit-transition: all 0s ease; opacity: 1;">
 
 </figure>    </a>                                                         </div>
                         </li>
-                                            <a href = "http://xoisland.com/"><li class="block-wrap ignore-shuffle" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 1541.25px; left: 0px;">
+                                            <a href = "http://xoisland.com/" target="_blank"><li class="block-wrap ignore-shuffle" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 1541.25px; left: 0px;">
                             <div class="block image img_loaded ignore-shuffle" style="position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; min-height: 0px;">
                                                                     <figure class="with-hidden-caption">
     <img class="resize ignore-shuffle" src="/assets/crowdfund.png"  alt="The Island Crowdfund" style="transition: all 0s ease; -webkit-transition: all 0s ease; opacity: 1;">
@@ -133,7 +133,7 @@ KINSELLA-MARSH GROUP, INC."</p>
     
 </figure>                                                             </div>
                         </li>
-                                            <a href = "http://openapparatus.com/"><li class="block-wrap ignore-shuffle" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 1849.5px; left: 0px;">
+                                            <a href = "http://openapparatus.com/" target="_blank"><li class="block-wrap ignore-shuffle" data-rowspan="1" data-colspan="1" style="position: absolute; width: 308.25px; height: 308.25px; top: 1849.5px; left: 0px;">
                             <div class="block image img_loaded ignore-shuffle" style="position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; min-height: 0px;">
                                                                     <figure class="with-hidden-caption">
     <img class="resize ignore-shuffle" src="/assets/openapp.png"  alt="Open apparatus Website" style="transition: all 0s ease; -webkit-transition: all 0s ease; opacity: 1;">
